--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "ENV=development webpack-dev-server  --mode development",
+    "start:dev": "webpack-dev-server  --env.mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
+    "open-browser-webpack-plugin": "^0.0.5",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.3.5",
     "sass-loader": "^7.1.0",
@@ -33,7 +34,8 @@
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7",
-    "webpack-md5-hash": "0.0.6"
+    "webpack-md5-hash": "0.0.6",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "react": "^16.4.2",
