--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "webpack-dev-server  --env.mode development",
+    "start:dev": "NODE_ENV=development webpack-dev-server  --env.mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
@@ -14,23 +14,29 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.1.3",
     "babel-loader": "^8.0.1",
+    "bootstrap-loader": "^3.0.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.0",
     "dotenv-webpack": "^1.5.7",
+    "exports-loader": "^0.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "imports-loader": "^0.8.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "open-browser-webpack-plugin": "^0.0.5",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.3.5",
+    "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.7",
@@ -38,6 +44,9 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1"
