--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "NODE_ENV=development webpack-dev-server  --env.mode development",
     "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "NODE_ENV=production webpack --env.mode production"
   },
   "keywords": [],
   "author": "",
