--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "open-browser-webpack-plugin": "^0.0.5",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.3.5",
+    "react-svg-loader": "^2.1.0",
     "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
