--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "start:dev": "NODE_ENV=development webpack-dev-server  --env.mode development",
     "dev": "webpack --mode development",
     "build": "NODE_ENV=production webpack --env.mode production"
@@ -17,7 +18,9 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@svgr/webpack": "^3.0.0",
     "autoprefixer": "^9.1.3",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.1",
     "bootstrap-loader": "^3.0.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -25,9 +28,13 @@
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.0",
     "dotenv-webpack": "^1.5.7",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
     "exports-loader": "^0.7.0",
     "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
+    "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "open-browser-webpack-plugin": "^0.0.5",
@@ -51,5 +58,14 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup/setupEnzyme.js",
+    "testPathIgnorePatterns": [
+      "<rootDir>/__tests__/setup/"
+    ],
+    "moduleNameMapper": {
+      "^RootDir(.*)$": "<rootDir>/src$1"
+    }
   }
-}
+  }
