--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^9.1.3",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.1",
+    "babel-plugin-import": "^1.9.1",
     "bootstrap-loader": "^3.0.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
@@ -52,9 +53,12 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "antd-mobile": "^2.2.5",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
+    "rc-form": "^2.2.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1"
@@ -68,4 +72,4 @@
       "^RootDir(.*)$": "<rootDir>/src$1"
     }
   }
-  }
+}
