--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rc-form": "^2.2.3",
+    "rc-queue-anim": "^1.6.6",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1"
